--- a/Estilos/Estilo.css
+++ b/Estilos/Estilo.css
@@ -1,13 +1,3 @@
-<<<<<<< HEAD
-<<<<<<< Updated upstream
-body{
-    background-color: black;
-    line-break: auto;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    text-align: justify;
-    line-height: 1.5;
-=======
 body {
   margin: 0;
   font-family: 'Avenir', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -15,15 +5,7 @@ body {
   background-color: #000;
   color: #fff;
   line-height: 1.7;
->>>>>>> Stashed changes
-=======
-body {
-  margin: 0;
-  font-family: 'Trebuchet MS', sans-serif;
-  background-color: #000;
-  color: #fff;
-  line-height: 1.7;
->>>>>>> fa6eec4dbebcf887abdadd6eba71f65b913b8bac
+
 }
 
 header {
@@ -35,13 +17,12 @@ header {
   border-bottom: 2px solid #222;
 }
 
-<<<<<<< HEAD
-<<<<<<< Updated upstream
+
 header nav ul li a{
-    margin: 0 15px; /* Añade espacio entre los elementos de la lista */
-    color: black; /* Establece el color del texto de los enlaces */
-    text-decoration: none; /* Elimina el subrayado de los enlaces */
-    font-weight: bold; /* Hace que el texto de los enlaces sea negrita */
+    margin: 0 15px;
+    color: White; 
+    text-decoration: none;
+    font-weight: bold;
 }
 
 header nav ul li:hover a {
@@ -50,19 +31,14 @@ header nav ul li:hover a {
     text-shadow: 0px 0px 10px white;
     border-radius: 5px;
     transition: 0.5s ease;
-=======
+}
+
 .logoHeader img {
   height: 20%;
   width: 20%;
   margin-left: 2px;
 }
 
-=======
-.logoHeader img {
-  height: 60px;
-}
-
->>>>>>> fa6eec4dbebcf887abdadd6eba71f65b913b8bac
 nav ul {
   list-style: none;
   display: flex;
@@ -75,7 +51,7 @@ nav ul li a {
   font-weight: bold;
   transition: color 0.3s;
 }
-<<<<<<< HEAD
+
 nav ul li a.active {
   color: gold;
   text-shadow: 0 0 8px #f1f1f1;
@@ -83,14 +59,6 @@ nav ul li a.active {
 nav ul li a:hover {
   color: #fff;
   text-shadow: 0 0 8px #f1f1f1;
->>>>>>> Stashed changes
-=======
-
-nav ul li a:hover,
-nav ul li a.active {
-  color: #fff;
-  text-shadow: 0 0 8px #f1f1f1;
->>>>>>> fa6eec4dbebcf887abdadd6eba71f65b913b8bac
 }
 
 h1{
@@ -136,34 +104,11 @@ img{
     text-align: center;
 }
 
-<<<<<<< HEAD
-<<<<<<< Updated upstream
-=======
 .centrado p{
     text-align: center;
 }
 
->>>>>>> Stashed changes
-=======
-.mision p{
-    margin-top: 1px;
-    margin-bottom: 1px;
-    font-size: 25px;
-    text-align: justify;
-    color: white;
-    text-shadow: 0px 0px 10px white;
-}
-.mision footer{
-    text-align: center;
-    padding: 10px 0;
-    position: relative;
-    bottom: 15;
-    width: 100%;
-    font-size: 14px;
-    color: #808080;
-}
 
->>>>>>> fa6eec4dbebcf887abdadd6eba71f65b913b8bac
 footer {
     text-align: center;
     padding: 10px 0;
